@@ -225,6 +225,7 @@
   \hbox{${\def\?{\kern.2em}%
     \def\${\ell}% long constant
     \def\_{\cdot 10^{\aftergroup}}% power of ten (via dirty trick)
+    \def\%{\cdot 2^{\aftergroup}}% power of two (via dirty trick)
     \let\~=\oct \let\^=\hex #1}$}}
 \def\U{\note{This code is used in section}} % xref for use of a section
 \def\Us{\note{This code is used in sections}} % xref for uses of a section
